kubernetes/apps/docmost/deployment-docmost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost
  namespace: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      containers:
        - name: docmost
          image: docmost/docmost:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /app/data/storage
          command: ["/bin/sh", "-c"]
          args:
            - |
              export DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
              # Execute the original entrypoint
              exec docker-entrypoint.sh npm run start
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: docmost-storage
