kubernetes/apps/docmost/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: docmost
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: docmost
spec:
  type: ClusterIP # Change to LoadBalancer if you don't use Ingress
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: docmost
