kubernetes/apps/docmost/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docmost-route
  namespace: docmost
spec:
  hostnames:
    - "docmost.home"
  parentRefs:
    - name: public-gateway
      namespace: kube-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docmost
          port: 3001
